Documenting with swagger finished
